# TBC-Generator

./: .gitignore  CMakeLists.txt  ReadMe.md  notes.txt
EasyBMP/: .gitignore  CMakeLists.txt
archive/: CM_shapefun.cpp  CM_shapefun.hpp
inc/: CM_SFCreator.hpp  CM_basictypes.hpp  CM_bondcoat.hpp  CM_config.hpp  CM_datatypes.hpp  CM_domain.hpp  CM_generation.hpp  CM_generationOMP.hpp  CM_growColumn.hpp  CM_logs.hpp  CM_mstypes.hpp  CM_parameters.hpp  CM_postproc.hpp  CM_postproc_GPU.cuh  CM_run.hpp  CM_setup.hpp  CM_shapefun.hpp  CM_task.hpp  CM_ui.hpp  CM_xmlparser.hpp  XmlNodes.hpp  basictypes.hpp  bondcoat.hpp  config.hpp  domain.hpp  generation.hpp  grain.hpp  parser.hpp  postproc.hpp  run.hpp  setup.hpp
logs/: 100424  test09042024
res/: output.bmp_0
src/: 100x180x100.xml  CM_SFCreator.cpp  CM_basictypes.cpp  CM_bondcoat.cpp  CM_datatypes.cpp  CM_domain.cpp  CM_generation.cpp  CM_generationOMP.cpp  CM_growColumn.cpp  CM_logs.cpp  CM_main.cpp  CM_mstypes.cpp  CM_postproc.cpp  CM_postproc_GPU.cu  CM_run.cpp  CM_setup.cpp  CM_shapefun.cpp  CM_ui.cpp  CM_xmlparser.cpp  Makefile  XmlNodes.cpp  bondcoat.cpp  clmstructure.cpp  domain.cpp  generation.cpp  generator_omp.cpp  main.cpp  parser.cpp  postproc.cpp  run.cpp  setup.cpp  test.cpp
src/tests/: single_column.cpp  task_creation.cpp
statistics/: generate_plots.py
xml/: 1000x150x1000.xml  100x180x100.xml  200x120x200.xml  3D-old.xml  3D.xml  400x120x400.xml  400x200x400.xml  basic.xml  evaluation-tuned.xml  test.xml  test_config.xml  test_config_3D.xml  test_single_column.xml
